# py2edg

./: .gitignore  LICENSE  README.md  pyproject.toml
py2edg/: __init__.py  _imports.py  api.py  benchmark.py  cli.py  converter.py  devices.py  optimizer.py  quantizer.py  recipe.py  report.py
tests/: test_py2edg.py
